--- a/index.html
+++ b/index.html
@@ -163,18 +163,18 @@ dt-article figcaption b {
 </dt-byline>
 <p>This is the Supplementary Material page with videos of our experimental results. Please see the paper for details.</p>
 <hr>
-<h2>1) Evolution of the self-attention controller of a biped-shaped Voxel-based Soft Robot</h2>
+<h2>1) Evolution of the self-attention controller of a biped-shaped Voxel-based Soft Robot.</h2>
 <p><video class="b-lazy" data-src="assets/biped/attention-biped-4.mp4" type="video/mp4" autoplay muted playsinline loop style="width: 100%; padding-top: 0;" ></video></p>
-<h2>2) Evolution of the self-attention controller of a comb-shaped Voxel-based Soft Robot</h2>
+<h2>2) Evolution of the self-attention controller of a comb-shaped Voxel-based Soft Robot.</h2>
 <p><video class="b-lazy" data-src="assets/comb/attention-comb-4.mp4" type="video/mp4" autoplay muted playsinline loop style="width: 100%; padding-top: 0;" ></video></p>
-<h2>3) Fine-tuning on a small biped the self-attention evolved on a large one</h2>
-<p><video class="b-lazy" data-src="assets/finetune-biped-large/finetune-biped-large-4.mp4" type="video/mp4" autoplay muted playsinline loop style="width: 100%; padding-top: 0;" ></video></p>
-<h2>4) Fine-tuning on a large biped the self-attention evolved on a small one;</h2>
+<h2>3) Fine-tuning on a small biped the self-attention evolved on a large one.</h2>
 <p><video class="b-lazy" data-src="assets/finetune-biped-small/finetune-biped-small-4.mp4" type="video/mp4" autoplay muted playsinline loop style="width: 100%; padding-top: 0;" ></video></p>
-<h2>5) Fine-tuning on a small comb the self-attention evolved on a large one;</h2>
-<p><video class="b-lazy" data-src="assets/finetune-comb-large/finetune-comb-large-4.mp4" type="video/mp4" autoplay muted playsinline loop style="width: 100%; padding-top: 0;" ></video></p>
-<h2>6) Fine-tuning on a large comb the self-attention evolved on a small one.</h2>
+<h2>4) Fine-tuning on a large biped the self-attention evolved on a small one.</h2>
+<p><video class="b-lazy" data-src="assets/finetune-biped-large/finetune-biped-large-4.mp4" type="video/mp4" autoplay muted playsinline loop style="width: 100%; padding-top: 0;" ></video></p>
+<h2>5) Fine-tuning on a small comb the self-attention evolved on a large one.</h2>
 <p><video class="b-lazy" data-src="assets/finetune-comb-small/finetune-comb-small-4.mp4" type="video/mp4" autoplay muted playsinline loop style="width: 100%; padding-top: 0;" ></video></p>
+<h2>6) Fine-tuning on a large comb the self-attention evolved on a small one.</h2>
+<p><video class="b-lazy" data-src="assets/finetune-comb-large/finetune-comb-large-4.mp4" type="video/mp4" autoplay muted playsinline loop style="width: 100%; padding-top: 0;" ></video></p>
 </dt-article>
 <dt-appendix>
 <h2>Acknowledgements</h2>
